// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_circle__9scc9013 styles_size_large__9scc9015"
        style="--nz71cj0: 7rem; --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_circle__9scc90e styles_size_large__9scc90g"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_large__9scc905"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_circle__9scc90p styles_size_large__9scc90r"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_circle__9scc901e uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_circle__9scc9013 styles_size_medium__9scc9016"
        style="--nz71cj0: var(--uv_theme_rwwhsl9n); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_circle__9scc90e styles_size_medium__9scc90h"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_medium__9scc906"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_circle__9scc90p styles_size_medium__9scc90s"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_circle__9scc901e uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_circle__9scc9013 styles_size_small__9scc9017"
        style="--nz71cj0: var(--uv_theme_rwwhsl9h); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_circle__9scc90e styles_size_small__9scc90i"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_small__9scc907"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_circle__9scc90p styles_size_small__9scc90t"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_circle__9scc901e uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_circle__9scc9013 styles_size_xsmall__9scc9018"
        style="--nz71cj0: var(--uv_theme_rwwhsl9d); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_circle__9scc90e styles_size_xsmall__9scc90j"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_circle__9scc9010"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_circle__9scc903 styles_size_xsmall__9scc908"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_circle__9scc90p styles_size_xsmall__9scc90u"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_circle__9scc901e uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_square__9scc9014 styles_size_large__9scc9015 styles_undefined_compound_0__9scc9019"
        style="--nz71cj0: 7rem; --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_square__9scc90f styles_size_large__9scc90g styles_undefined_compound_0__9scc90k"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingLarge__1do42ls12 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_large__9scc905 styles_undefined_compound_0__9scc909"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_square__9scc90q styles_size_large__9scc90r styles_undefined_compound_0__9scc90v"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_square__9scc901f uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_square__9scc9014 styles_size_medium__9scc9016 styles_undefined_compound_1__9scc901a"
        style="--nz71cj0: var(--uv_theme_rwwhsl9n); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_square__9scc90f styles_size_medium__9scc90h styles_undefined_compound_1__9scc90l"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_medium__9scc906 styles_undefined_compound_1__9scc90a"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_square__9scc90q styles_size_medium__9scc90s styles_undefined_compound_1__9scc90w"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_square__9scc901f uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_square__9scc9014 styles_size_small__9scc9017 styles_undefined_compound_2__9scc901b"
        style="--nz71cj0: var(--uv_theme_rwwhsl9h); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_square__9scc90f styles_size_small__9scc90i styles_undefined_compound_2__9scc90m"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_small__9scc907 styles_undefined_compound_2__9scc90b"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_square__9scc90q styles_size_small__9scc90t styles_undefined_compound_2__9scc90x"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_square__9scc901f uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
    >
      <span
        class="styles__9scc9012 styles_shape_square__9scc9014 styles_size_xsmall__9scc9018 styles_undefined_compound_3__9scc901c"
        style="--nz71cj0: var(--uv_theme_rwwhsl9d); --nz71cj1: var(--uv_theme_rwwhsl5j); --nz71cj2: var(--uv_theme_rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M2.75 1A1.75 1.75 0 0 0 1 2.75v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75V2.75A1.75 1.75 0 0 0 5.083 1zm0 8.167A1.75 1.75 0 0 0 1 10.917v2.333c0 .967.784 1.75 1.75 1.75h2.333a1.75 1.75 0 0 0 1.75-1.75v-2.333a1.75 1.75 0 0 0-1.75-1.75zM9.167 2.75c0-.966.783-1.75 1.75-1.75h2.333c.967 0 1.75.784 1.75 1.75v2.333a1.75 1.75 0 0 1-1.75 1.75h-2.333a1.75 1.75 0 0 1-1.75-1.75zm1.75 6.417a1.75 1.75 0 0 0-1.75 1.75v2.333c0 .967.783 1.75 1.75 1.75h2.333A1.75 1.75 0 0 0 15 13.25v-2.333a1.75 1.75 0 0 0-1.75-1.75z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="false"
      style="background-image: url("/src/components/Other/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_neutral__9scc901 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
    >
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__9scc90d styles_shape_square__9scc90f styles_size_xsmall__9scc90j styles_undefined_compound_3__9scc90n"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz5 uv_icons_1sbwqkz9 uv_icons_1sbwqkzh uv_icons_1sbwqkz1y"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__9scc90z styles_shape_square__9scc9011"
      >
        <span
          class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__9scc900 styles_sentiment_primary__9scc902 styles_shape_square__9scc904 styles_size_xsmall__9scc908 styles_undefined_compound_3__9scc90c"
      data-has-background="false"
    >
      <div
        class="styles__9scc90o styles_shape_square__9scc90q styles_size_xsmall__9scc90u styles_undefined_compound_3__9scc90y"
      >
        <svg
          aria-hidden="true"
          class="styles__9scc901d styles_shape_square__9scc901f uv_icons_q76b9r2 uv_icons_q76b9r5"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <g>
            <g>
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#f1eefc"
              />
            </g>
            <g>
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#521094"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#a060f6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
